updating the variables to reflect the changes

--- a/vars/bash.env
+++ b/vars/bash.env
@@ -17,10 +17,15 @@ CLOUD_IMAGE_URL="https://cloud.debian.org/images/cloud/bookworm/latest/$VMIMAGE"
 
 # Ansible Variables
 ANSIBLE_USER="ansible"
+ANSIBLE_CONFIG="ansible.cfg"
 SSH_KEY_NAME="ansible-key"
+PROJECT_FOLDER="/home/$ANSIBLE_USER/CDN"
+ANSIBLE_FOLDER="$PROJECT_FOLDER/ansible"
+SCRIPT_FOLDER="$PROJECT_FOLDER/scripts"
+VARS_FOLDER="$PROJECT_FOLDER/vars"
 SSH_KEY_PATH="/home/$ANSIBLE_USER/.ssh/$SSH_KEY_NAME"
 INVENTORY_FILE="inventory.yml"
-ANSIBLE_PLAYBOOK="proxmox_onboard.yml"
+PROXMOX_ONBOARD="proxmox_onboard.yml"
 SUDOER_FILE="files/sudoer_ansible"
 # Set the Ubuntu codename for Debian 12 (Bookworm)
 UBUNTU_CODENAME=jammy
