--- a/ansible/playbooks/create_debian_template.yml
+++ b/ansible/playbooks/create_debian_template.yml
@@ -1,23 +1,43 @@
 ---
 - name: Provision and Configure Debian Template on Proxmox
-  hosts: proxmox
+  hosts: proxmox_host
   become: true
   vars_files:
-    - vars/bash.env
+    - ../vars/provision_vms.yml
   tasks:
+    - name: Check if the Debian 12 Generic Cloud image exists
+      ansible.builtin.stat:
+        path: "/tmp/{{ vm_image }}"
+      register: image_file
+
     - name: Download the Debian 12 Generic Cloud image
       ansible.builtin.shell: |
         wget --trust-server-names -P /tmp -N "{{ cloud_image_url }}"
       args:
         chdir: /tmp
+      when: not image_file.stat.exists  # Skip if the image already exists
+
+    - name: Check if the VM already exists
+      ansible.builtin.shell: |
+        qm list | grep -w {{ vm_id }}
+      register: vm_check
+      ignore_errors: true
 
     - name: Create a VM with the desired specifications
       ansible.builtin.shell: |
         qm create {{ vm_id }} --name {{ vm_name }} --memory {{ memory }} --net0 virtio,bridge={{ bridge }} --kvm 0
+      when: vm_check.rc != 0  # Skip if the VM already exists
+
+    - name: Check if the disk is already imported
+      ansible.builtin.shell: |
+        ls /var/lib/vz/images/{{ vm_id }}/vm-{{ vm_id }}-disk-0.raw
+      register: disk_check
+      ignore_errors: true
 
     - name: Import the raw disk into the ZFS storage
       ansible.builtin.shell: |
         qm importdisk {{ vm_id }} /tmp/{{ vm_image }} {{ storage }} -format {{ format }}
+      when: disk_check.rc != 0  # Skip if the disk is already imported
 
     - name: Attach the imported disk to the VM using VirtIO SCSI
       ansible.builtin.shell: |
@@ -30,6 +50,7 @@
     - name: Resize the disk to the specified size
       ansible.builtin.shell: |
         qm resize {{ vm_id }} scsi0 {{ disk_size }}
+      when: disk_check.rc != 0  # Resize only if the disk was newly imported
 
     - name: Configure network for DHCP
       ansible.builtin.shell: |
@@ -56,16 +77,10 @@
     - name: Convert the VM to a template
       ansible.builtin.shell: |
         qm template {{ vm_id }}
+      when: vm_check.rc != 0  # Skip if the VM is already a template
 
     - name: Clean up downloaded image file
       ansible.builtin.file:
         path: /tmp/{{ vm_image }}
         state: absent
-
-    - name: Create a linked clone of the template
-      ansible.builtin.shell: |
-        qm clone {{ vm_id }} {{ clone_id }} --name {{ clone_name }}
-
-    - name: Start the cloned VM
-      ansible.builtin.shell: |
-        qm start {{ clone_id }}
+      when: image_file.stat.exists  # Run cleanup if the image file exists
