--- a/ansible/playbooks/configure_docker.yml
+++ b/ansible/playbooks/configure_docker.yml
@@ -2,7 +2,7 @@
   hosts: docker
   become: true
   vars:
-    docker_compose_version: "2.15.1"  # Replace with the desired version
+    docker_compose_version: "2.29.7"  # Replace with the desired version
   tasks:
     - name: Install required dependencies
       apt:
@@ -13,6 +13,9 @@
         - ca-certificates
         - curl
         - software-properties-common
+        - python3-pip
+        - virtualenv
+        - python3-setuptools
 
     - name: Add Docker's official GPG key
       apt_key:
