--- a/vars/bash.env
+++ b/vars/bash.env
@@ -5,14 +5,15 @@ NETMASK="255.255.255.0"
 
 # Ansible Variables
 ANSIBLE_USER="ansible"
-SSH_KEY_PATH="/home/$ANSIBLE_USER/.ssh"
 SSH_KEY_NAME="ansible-key"
+SSH_KEY_FOLDER="/home/$ANSIBLE_USER/.ssh"
+SSH_KEY_PATH="$SSH_KEY_FOLDER/$SSH_KEY_NAME"
+INVENTORY_FILE="inventory.yml"
 ANSIBLE_CONFIG="ansible.cfg"
 PROJECT_FOLDER="/home/$ANSIBLE_USER/CDN"
 ANSIBLE_FOLDER="$PROJECT_FOLDER/ansible"
 SCRIPT_FOLDER="$PROJECT_FOLDER/scripts"
 VARS_FOLDER="$PROJECT_FOLDER/vars"
-INVENTORY_FILE="inventory.yml"
 PROXMOX_ONBOARD="proxmox_onboard.yml"
 SUDOER_FILE="files/sudoer_ansible"
 # Set the Ubuntu codename for Debian 12 (Bookworm)
