updating bash.env vars

--- a/vars/bash.env
+++ b/vars/bash.env
@@ -15,6 +15,6 @@ ANSIBLE_FOLDER="$PROJECT_FOLDER/ansible"
 SCRIPT_FOLDER="$PROJECT_FOLDER/scripts"
 VARS_FOLDER="$PROJECT_FOLDER/vars"
 PROXMOX_ONBOARD="proxmox_onboard.yml"
-SUDOER_FILE="files/sudoer_ansible"
+SUDOER_FILE="sudoer_ansible"
 # Set the Ubuntu codename for Debian 12 (Bookworm)
 UBUNTU_CODENAME=jammy
