updating vars to jinja

--- a/ansible/vars/provision_vms.yml
+++ b/ansible/vars/provision_vms.yml
@@ -7,10 +7,10 @@ memory: 2048
 bridge: "vmbr0"
 disk_size: "6G"
 storage: "jaro-zfs"
-ssh_key_path: "/root/ansible-key.pub"
+ssh_key_path: "/root/.ssh/ansible-key.pub"
 image_format: raw
-vm_image: "debian-12-genericcloud-amd64.$image_format"
-cloud_image_url: "https://cloud.debian.org/images/cloud/bookworm/$vm_image"
+vm_image: "debian-12-genericcloud-amd64.{{ image_format }}"
+cloud_image_url: "https://cloud.debian.org/images/cloud/bookworm/latest/{{ vm_image }}"
 
 # Cloud-init configuration type
 citype: "cidata"
