updating the example variables to reflect bash.env

--- a/vars/bash.env.example
+++ b/vars/bash.env.example
@@ -1,20 +1,18 @@
 # Proxmox Network Parameters
-PROXMOX_HOST="192.168.183.190"
-GATEWAY="192.168.183.1"
+PROXMOX_HOST="192.168.1.50"
+GATEWAY="192.168.1.1"
 NETMASK="255.255.255.0"
 
 # Ansible Variables
 ANSIBLE_USER="ansible"
 SSH_KEY_NAME="ansible-key"
-SSH_KEY_FOLDER="/home/$ANSIBLE_USER/.ssh"
+SSH_KEY_FOLDER="$HOME/.ssh"
 SSH_KEY_PATH="$SSH_KEY_FOLDER/$SSH_KEY_NAME"
 INVENTORY_FILE="inventory.yml"
 ANSIBLE_CONFIG="ansible.cfg"
-PROJECT_FOLDER="/home/$ANSIBLE_USER/CDN"
+PROJECT_FOLDER="$(dirname "$(realpath "$0")")/.."
 ANSIBLE_FOLDER="$PROJECT_FOLDER/ansible"
-SCRIPT_FOLDER="$PROJECT_FOLDER/scripts"
-VARS_FOLDER="$PROJECT_FOLDER/vars"
 PROXMOX_ONBOARD="proxmox_onboard.yml"
-SUDOER_FILE="files/sudoer_ansible"
+SUDOER_FILE="sudoer_ansible"
 # Set the Ubuntu codename for Debian 12 (Bookworm)
 UBUNTU_CODENAME=jammy
